# FFmpegAndroidDemo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/linjw/demo/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: video.flv
app/src/main/cpp/: CMakeLists.txt  common.h  egl_helper.cpp  egl_helper.h  ffmpeg_demo.cpp  media_reader.cpp  media_reader.h  opengl_display.cpp  opengl_display.h  opensl_helper.cpp  opensl_helper.h  stream_decoder.cpp  stream_decoder.h  video_decoder.cpp  video_decoder.h  video_sender.cpp  video_sender.h
app/src/main/java/me/linjw/demo/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/me/linjw/demo/ffmpeg/: ExampleUnitTest.java
ffmpeg-4.4.2/: build_ffmpeg.sh  config.h
ffmpeg-4.4.2/android/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-4.4.2/android/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-4.4.2/android/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-4.4.2/android/x86_64/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-4.4.2/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-4.4.2/libavcodec/: codec_list.c
gradle/wrapper/: gradle-wrapper.properties
wrapper/: gradle-wrapper.properties
